# querygpt

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/querygpt/: __init__.py  cli.py  models.py  report.py
src/querygpt/schema/: __init__.py  inspector.py  mapper.py  validator.py
src/querygpt/translator/: __init__.py  generator.py  optimizer.py  parser.py
tests/: test_benchmark.py  test_core.py  test_generator.py  test_inspector.py  test_integration.py  test_mapper.py  test_models.py  test_optimizer.py  test_parser.py  test_validator.py
